# ParallellaDARTS

./: .gitignore  CMakeLists.txt  README.md  run.sh
DARTS/apps/Fib/: fib.cpp
DARTS/src/abstractmachine/: Affinity.cpp
eDARTS/include/: common.h
eDARTS/include/assets/: codeletsQueue.h  darts.ldf  fast_cacheman_codelets.ldf  syncSlot.h  tpClosuresQueue.h
eDARTS/include/codeletModel/: codelet.h  threadedProcedure.h  tpClosure.h
eDARTS/include/multithreading/: e_darts_barrier.h  e_darts_mutex.h
eDARTS/include/runtime/: darts_rt_params.h  e_DARTS.h
eDARTS/include/runtime/device/: e_darts_cam.h  e_darts_cu.h  e_darts_cu_scheduler.h  e_darts_global.h  e_darts_mailbox.h  e_darts_print.h  e_darts_rt.h  e_darts_scheduler_base.h  e_darts_su.h  e_darts_su_scheduler.h
eDARTS/include/runtime/host/: darts_api.h  darts_data_server.h  darts_print_server.h  e_darts_api.h
eDARTS/src/assets/: CMakeLists.txt  codeletsQueue.c  syncSlot.c  tpClosuresQueue.c
eDARTS/src/codeletModel/: CMakeLists.txt  codelet.c  threadedProcedure.c
eDARTS/src/multithreading/: CMakeLists.txt  e_darts_barrier.c  e_darts_mutex.c
eDARTS/src/runtime/: .CMakeLists.txt.swp  CMakeLists.txt  e_DARTS.c  e_DARTS_init.c  rt_main.c
eDARTS/src/runtime/device/: CMakeLists.txt  e_darts_cu.c  e_darts_cu_scheduler.c  e_darts_global.c  e_darts_mailbox.c  e_darts_print.c  e_darts_rt.c  e_darts_scheduler_base.c  e_darts_su.c  e_darts_su_scheduler.c
eDARTS/src/runtime/host/: CMakeLists.txt  darts_api.c  darts_data_server.c  darts_print_server.c  e_darts_api.c
eDARTS/src/softcache/: CMakeLists.txt
eDARTS/test/: CMakeLists.txt
eDARTS/test/api/: CMakeLists.txt
eDARTS/test/api/basic_signal_test/: e_darts_mailbox_test.c  main.c
eDARTS/test/api/e_darts_comm/: e_darts_comm_test.c  main.c
eDARTS/test/assets/: CMakeLists.txt
eDARTS/test/assets/codeletQueue/: e_codQueue.c  main.c
eDARTS/test/assets/syncSlot/: e_syncSlot_test.c  main.c
eDARTS/test/assets/tpClosuresQueue/: e_tpClosuresQueue_test.c  e_tp_definitions.h  main.c
eDARTS/test/codeletModel/: CMakeLists.txt  e_tp_definition_test.h  e_tp_test.c  main.c
eDARTS/test/general/: CMakeLists.txt
eDARTS/test/general/fib/: e_darts_fib_test.c  main.c
eDARTS/test/general/matrix_multiply/: e_darts_matrix_multiply_test.c  main.c
eDARTS/test/general/vector_add/: e_darts_vector_add_test.c  main.c
eDARTS/test/general/vector_dotProduct/: e_darts_vector_dotProduct_test.c  main.c
eDARTS/test/multithreading/: CMakeLists.txt
eDARTS/test/multithreading/e_darts_barrier/: e_darts_barrier_test.c  main.c
eDARTS/test/multithreading/e_darts_mutex/: e_darts_mutex_test.c  main.c
eDARTS/test/runtime/: CMakeLists.txt
eDARTS/test/runtime/e_darts_print/: e_darts_print_test.c  main.c
eDARTS/test/runtime/e_darts_rt/: e_darts_rt_test.c  e_tp_definitions.h  main.c
preliminaries/: .e_CU.c.swp  .e_SU.c.swp  build.sh
preliminaries/previousTo2017/: .gitignore  e_SU.c  main.c  test_function_only.c  test_function_only.s
preliminaries/work2017/codeMovement/: Makefile  cachemanager.S  common.h  e_DARTS.c  e_DARTS.h  main.c
preliminaries/work2017/memTimers/: 1000addPenalty.fig  e_SU.c  plotGen.m
preliminaries/work2017/multipleQueues/: codeletsQueue.h  common.h  e_CU.c  e_SU.c  main.c
preliminaries/work2017/singlequeue/: build.sh  codeletsQueue.h  e_SU.c
preliminaries/work2017/syncSlotsCreation/: CMakeLists.txt  Makefile  codeletsQueue.h  common.h  e_CU.c  e_DARTS.h  e_SU.c  main.c  syncSlots.h
preliminaries/work2017/syncSlotsCreation/eDARTS/: CMakeLists.txt
preliminaries/work2017/syncSlotsCreation/eDARTS/include/: common.h
preliminaries/work2017/syncSlotsCreation/eDARTS/include/assets/: codeletsQueue.h  fast_cacheman_codelets.ldf  syncSlot.h  syncSlots.h
preliminaries/work2017/syncSlotsCreation/eDARTS/include/codeletModel/: codelet.h
preliminaries/work2017/syncSlotsCreation/eDARTS/include/runtime/device/: e_darts_print.h
preliminaries/work2017/syncSlotsCreation/eDARTS/src/: CMakeLists.txt
preliminaries/work2017/syncSlotsCreation/eDARTS/src/assets/: CMakeLists.txt  codeletsQueue.c  syncSlot.c  syncSlots.c
preliminaries/work2017/syncSlotsCreation/eDARTS/src/codeletModel/: codelet.c
preliminaries/work2017/syncSlotsCreation/eDARTS/src/multithreading/: CMakeLists.txt
preliminaries/work2017/syncSlotsCreation/eDARTS/src/runtime/: CMakeLists.txt
preliminaries/work2017/syncSlotsCreation/eDARTS/src/softcache/: CMakeLists.txt
preliminaries/work2017/syncSlotsCreation/eDARTS/test/: CMakeLists.txt
preliminaries/work2017/syncSlotsCreation/eDARTS/test/assets/: CMakeLists.txt
preliminaries/work2017/syncSlotsCreation/eDARTS/test/runtime/: CMakeLists.txt
preliminaries/work2017/syncSlotsCreation/e_DARTS/include/assets/: fast_cacheman_codelets.ldf
preliminaries/work2017/syncSlotsCreation/e_DARTS/include/multithreading/: e_darts_mutex.h
preliminaries/work2017/syncSlotsCreation/e_DARTS/src/assets/: codeletsQueue.c
preliminaries/work2017/syncSlotsCreation/e_DARTS/src/multithreading/: e_darts_mutex.c
preliminaries/work2017/syncSlotsCreation/e_DARTS/src/runtime/: e_DARTS_init.c
preliminaries/work2017/twocores/: build.sh  e_CU.c  e_SU.c  main.c
seans-playground/: build.sh  common.h  e_CU.c  e_SU.c  main.c  run.sh
syncSlotsCreation/: .gitignore  build.sh
syncSlotsCreation/cmake/: CMakeColors.txt
syncSlotsCreation/eDARTS/: CMakeLists.txt
syncSlotsCreation/eDARTS/include/: common.h
syncSlotsCreation/eDARTS/include/assets/: syncSlot.h
syncSlotsCreation/eDARTS/include/codeletModel/: codelet.h
syncSlotsCreation/eDARTS/include/multithreading/: e_darts_mutex.h
syncSlotsCreation/eDARTS/include/runtime/: e_DARTS.h
syncSlotsCreation/eDARTS/src/multithreading/: e_darts_mutex.c
syncSlotsCreation/eDARTS/src/runtime/: e_DARTS.c
syncSlotsCreation/eDARTS/test/assets/syncSlot/: e_syncSlot_test.c  main.c
syncSlotsCreation/eDARTS/test/multithreading/: CMakeLists.txt
syncSlotsCreation/eDARTS/test/multithreading/e_darts_mutex/: main.c
syncSlotsCreation/eDARTS/test/runtime/e_darts_print/: e_darts_print_test.c
(+12 files in other folders)
